Modal Experimentation -Placed modal within loop, modal displaying, but issue with z-index -created a partial for the loop, will need to tinker a bit more -partial not implemented yet

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -11,20 +11,6 @@ section h2 {
   font-size: 3em;
 }
 
-section.success {
-  color: #fff;
-  background: #18bc9c;
-}
-
-section.success a,
-section.success a:hover,
-section.success a:focus,
-section.success a:active,
-section.success a.active {
-  outline: 0;
-  color: #2c3e50;
-}
-
 @media(max-width:767px) {
   section {
     padding: 75px 0;
@@ -48,6 +34,7 @@ table.up-close {
     }
   }
 }
+
 
 #profile .profile-item {
   right: 0;
@@ -98,6 +85,10 @@ table.up-close {
 
 #profile * {
   z-index: 2;
+}
+
+div[id^='profileModal'] {
+  z-index: 9000;
 }
 
 @media(min-width:767px) {
